src/test/resources/entity_test/invalid/Employee9.entity
Employee9 {

 id: int { @Id, @NotNull };
 
 name : string ;
 
 foo : double  ;
 
 comment : string // ';' (end of field) expected before '}'
} 